force-app/main/default/objects/Sales_Segment_Reference__c/Sales_Segment_Reference__c.object-meta.xml
<CustomObject>
    <description>Phase 2 - This object contains reference data for Sales Segment to be derived from Tier/Segment/Post codes.</description>
    <label>Sales Team Reference</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Customer Segment Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Team Reference</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>