force-app/main/default/objects/Sales_Segment_Reference__c/fields/Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is to determine the sales director based on the Sector and/or Tier and add this notion on the Organisation record.</inlineHelpText>
    <label>Sales Team Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Segment_Reference</relationshipName>
    <type>Lookup</type>
</CustomField>