force-app/main/default/objects/Sales_Segment_Reference__c/fields/Sales_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Segment__c</fullName>
    <description>.</description>
    <label>Sales Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Centrally Managed</fullName>
            </value>
            <value>
                <fullName>eCommerce Partnerships</fullName>
            </value>
            <value>
                <fullName>Enterprise - Not Active</fullName>
            </value>
            <value>
                <fullName>Enterprise NSW 1</fullName>
            </value>
            <value>
                <fullName>Enterprise NSW 2</fullName>
            </value>
            <value>
                <fullName>Enterprise QLD &amp; NT</fullName>
            </value>
            <value>
                <fullName>Enterprise VIC 1</fullName>
            </value>
            <value>
                <fullName>Enterprise VIC 2</fullName>
            </value>
            <value>
                <fullName>Enterprise VIC 3</fullName>
            </value>
            <value>
                <fullName>Enterprise VIC 4</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Financial Institutions - Not Active</fullName>
            </value>
            <value>
                <fullName>Government North</fullName>
            </value>
            <value>
                <fullName>Government North - National Defence</fullName>
            </value>
            <value>
                <fullName>Government - Not Active</fullName>
            </value>
            <value>
                <fullName>Government South</fullName>
            </value>
            <value>
                <fullName>Holding Sales Team</fullName>
                <default>true</default>
                <label>Holding Sales Team</label>
            </value>
            <value>
                <fullName>Intermediaries</fullName>
            </value>
            <value>
                <fullName>Intermediaries - Not Active</fullName>
            </value>
            <value>
                <fullName>LBP Post Offices NSW/ACT &amp; QLD/NT</fullName>
            </value>
            <value>
                <fullName>LBP Post Offices VIC/TAS &amp; WA &amp; SA</fullName>
            </value>
            <value>
                <fullName>LBP Sales Manager NSW 1</fullName>
            </value>
            <value>
                <fullName>LBP Sales Manager NSW 2</fullName>
            </value>
            <value>
                <fullName>LBP Sales Manager NSW 3</fullName>
            </value>
            <value>
                <fullName>LBP Sales Manager NSW 4</fullName>
            </value>
            <value>
                <fullName>LBP Sales Manager QLD 1</fullName>
            </value>
            <value>
                <fullName>LBP Sales Manager QLD 2</fullName>
            </value>
            <value>
                <fullName>LBP Sales Manager QLD 3</fullName>
            </value>
            <value>
                <fullName>LBP Sales Manager SA 1</fullName>
            </value>
            <value>
                <fullName>LBP Sales Manager VIC 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>