force-app/main/default/objects/Sales_Segment_Reference__c/fields/Sales_Team_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Owner_Type__c</fullName>
    <label>Sales Team Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Director</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>