force-app/main/default/objects/Sales_Segment_Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sales_Director__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Sales_Segment__c</columns>
    <columns>Sales_Team_Owner_Type__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>