force-app/main/default/objects/Sales_Segment_Reference__c/listViews/SalesSegment.listView-meta.xml
<ListView>
    <fullName>SalesSegment</fullName>
    <columns>NAME</columns>
    <columns>Sales_Segment__c</columns>
    <columns>Sales_Director__c</columns>
    <filterScope>Everything</filterScope>
    <label>Sales Coverage</label>
</ListView>